<resources>
    <string name="app_name">Appreptiles</string>
    <string name="id1coc">Cocodrilos</string>
    <string name="id2squa">Squamatas</string>
    <string name="id3que">Quelenios</string>
    <string name="id4rin">Rinocefalos</string>

    <string name="sarcosuchus">Sarcosuchus fue descubierto por primera vez en 1947 por el paleontólogo francés Félix de Lapparent, quien encontró algunos de sus dientes cónicos, sus vértebras y las escamas de un pie. En 1966, Philippe Taquet llamó a esta criatura Sarcosuchus imperator. De hecho, Philippe Taquet había descubierto los restos de Sarcosuchus imperator en 1964, en Gadoufaoua, Teneré, Níger. También se descubrieron otros fósiles de este género en Brasil, América del Sur, siendo clasificados como S. hartti. En 2000 se realizó una expedición al desierto del Sahara, donde se encontraron nuevos restos de esta especie. El paleontólogo Paul Sereno y su equipo, recuperaron fósiles de vértebras, huesos de las extremidades, placas, mandíbulas y un cráneo casi completo. Los fósiles encontrados han reunido un poco más del 50% del esqueleto, lo suficiente como para reconstruir un ejemplar a su tamaño real.</string>
    <string name="crocodylus_porosus">El cocodrilo marino es reportado, dentro del grupo reptiles, como el más grande del mundo. Este reptil ha recibido varias denominaciones comunes, por ejemplo, cocodrilo de estuario, poroso o cocodrilo de agua salada. Pertenece a la familia Crocodylidae y su denominación científica es Crocodylus porosus. Es un animal muy agresivo que ha cobrado la vida de muchos seres humanos.</string>
    <string name="paleosuchus_palpebrosus">Paleosuchus palpebrosus es también conocido como caimán enano o caimán enano de Cuvier. Su denominación común le da nombre por su tamaño reducido en comparación a sus congéneres, o por el zoólogo y paleontólogo que lo descubrió: Georges Léopold Chrétien Frédéric Dagobert Cuvier.
Por el momento la población es estable y abundante, por lo que se califica con el estatus de “Preocupación Menor”.</string>

    <string name="heloderma_horridum">El lagarto de chaquira, escorpión grande, lagarto de cuentas, lagarto escorpión, escorpión negro, o lagarto enchaquirado, también conocido como lagarto moteado mexicano o acaltetepón (Heloderma horridum) es un lagarto venenoso de la familia Helodermatydae.
Mide aproximadamente 40 cm, con cabeza, cuerpo grande y cola corta. La punta de su cabeza es de color castaño obscuro a negro. Parte superior, lados y porción ventral son oscuros. Dorso con manchas grandes redondeadas color amarillo claro, hacia los lados del cuerpo, extremidades posteriores y cola forman bandas amarillas transversales. Parte dorsal de la cabeza, cuerpo, cola, bajo la cabeza y extremidades poseen escamas granulares redondeadas. Extremidades con dedos y garras largas. Lengua extensible y bifurcada en la punta muy notoria. Presenta glándulas de veneno.</string>
    <string name="heloderma_charlesbogerti">The Guatemalan beaded lizard (Heloderma charlesbogerti), also called commonly the Motagua Valley beaded lizard, is a highly endangered species of beaded lizard, a venomous lizard in the family Helodermatidae. The species is endemic to the dry forests of the Motagua Valley in southeastern Guatemala, an ecoregion known as the Motagua Valley thornscrub. It is the only allopatric beaded lizard species, separated from the nearest population (H. alvarezi) by 250 km (160 mi) of unsuitable habitat. The Guatemalan beaded lizard is the rarest and most endangered species of beaded lizard, and it is believed that fewer than 200 individuals of this animal exist in the wild, making it one of the most endangered lizards in the world. In 2007, it was transferred from Appendix II to Appendix I of CITES due to its critical conservation status.</string>
    <string name="heloderma_alvarezi">El veneno de los heloderma alvarezi no se considera letal, pero puede producir síntomas como: dolor, parálisis, dificultad para respirar o hipotermia. La gilatida es una toxina aislada a partir del veneno del «Monstruo de Gila» (Heloderma suspectum) pariente norteño de estos lagartos chiapanecos, la cual funciona mejorando la memoria de la víctima mordida, provocando que no se le olvide lo ocurrido y sirva como futura advertencia, afirmó la Red.</string>

    <string name="tortuga_de_orejas_rojas">La jicotea elegante (Trachemys scripta elegans), también conocida como galápago de Florida, o tortuga de orejas rojas, es una subespecie de tortuga semiacuática perteneciente a la familia Emydidae, originaria de la región que comprende el sureste de los Estados Unidos y el noreste de México, aunque en la actualidad se encuentra en muchas otras partes del mundo por su comercio como mascota.</string>
    <string name="trachemys_scriptas_scripta">Es una de las tres subespecies de Trachemys scripta que hoy reconoce la ciencia. Son tortugas robustas, que de adultas presentan una coloración general negruzca o pardo oscuro, con líneas muy contrastadas de color amarillo en cara, patas y cola. El plastrón es amarillo y luce normalmente muy pocas manchas, que siempre son negras, pequeñas y compactas. Los juveniles son de color verde vivo y con más dibujos en el espaldar. Se diferencia de las otras dos subespecies por el plastrón más amarillo, con menos manchas y más pequeñas, y porque la mancha postorbital de la sien y la raya que parte de debajo del ojo están unidas tras el mismo por una mancha amarilla vertical, lo que hace que tengan una suerte de media luna vertical amplia en el ojo. La mancha postorbital de la sien a veces es rojiza, pero siempre se torna negra y desaparece con la edad. Incluida en el catálogo de especies exóticas invasoras en España, Real Decreto 630/2013 de 2 de agosto,por el que se regula el Catálogo de Especies Exóticas Invasoras.</string>
    <string name="graptemys_pseudogeographica">Las tortugas mapa (Graptemys) son un género de tortugas de la familia Emydidae. Son tortugas acuáticas originarias del este de Norteamérica. Se parecen a muchas otras especies de tortugas acuáticas, incluyendo Trachemys y Pseudemys, de las que se distinguen por desarrollar una quilla que se extiende a lo largo del centro del caparazón, y también porque suelen alcanzar un tamaño menor. Se les da el nombre de tortuga mapa por a las marcas que tienen en el caparazón. La esperanza de vida media de las tortugas mapa es de entre 15 y 30 años.</string>

    <string name="rinocefalos">Los esfenodontos (Sphenodontia) o rincocéfalos (Rhynchocephalia) son un orden de saurópsidos (reptiles) lepidosaurios que incluye un solo género actual, Sphenodon, con una sola especies (Sphenodon punctatus), conocidas con el nombre común de tuátaras, limitadas a Nueva Zelanda.</string>
</resources>