<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Quelenios">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCocoV1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCocoV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.70" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCocoV3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCocoH1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCocoH2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCocoH3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCocoH4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/tortuga_de_orejas_rojas"
        android:layout_width="756dp"
        android:layout_height="207dp"
        android:autoSizeTextType="uniform"
        android:text="@string/tortuga_de_orejas_rojas"
        app:layout_constraintBottom_toTopOf="@+id/guidelineCocoH2"
        app:layout_constraintEnd_toStartOf="@+id/guidelineCocoV2"
        app:layout_constraintStart_toStartOf="@+id/guidelineCocoV1"
        app:layout_constraintTop_toTopOf="@+id/guidelineCocoH1" />

    <TextView
        android:id="@+id/trachemys_scriptas_scripta"
        android:layout_width="752dp"
        android:layout_height="207dp"
        android:autoSizeTextType="uniform"
        android:text="@string/trachemys_scriptas_scripta"
        app:layout_constraintBottom_toTopOf="@+id/guidelineCocoH3"
        app:layout_constraintEnd_toStartOf="@+id/guidelineCocoV2"
        app:layout_constraintStart_toStartOf="@+id/guidelineCocoV1"
        app:layout_constraintTop_toTopOf="@+id/guidelineCocoH2" />

    <TextView
        android:id="@+id/graptemys_pseudogeographica"
        android:layout_width="731dp"
        android:layout_height="204dp"
        android:autoSizeTextType="uniform"
        android:text="@string/graptemys_pseudogeographica"
        app:layout_constraintBottom_toTopOf="@+id/guidelineCocoH4"
        app:layout_constraintEnd_toStartOf="@+id/guidelineCocoV2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineCocoV1"
        app:layout_constraintTop_toTopOf="@+id/guidelineCocoH3"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>