<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cocodrilo">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCocoV1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCocoV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.70" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCocoV3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCocoH1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCocoH2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCocoH3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCocoH4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/textSarcosuchus"
        android:layout_width="756dp"
        android:layout_height="207dp"
        android:autoSizeTextType="uniform"
        android:text="@string/sarcosuchus"
        app:layout_constraintBottom_toTopOf="@+id/guidelineCocoH2"
        app:layout_constraintEnd_toStartOf="@+id/guidelineCocoV2"
        app:layout_constraintStart_toStartOf="@+id/guidelineCocoV1"
        app:layout_constraintTop_toTopOf="@+id/guidelineCocoH1" />

    <TextView
        android:id="@+id/textCrocodylusPorosus"
        android:layout_width="752dp"
        android:layout_height="207dp"
        android:autoSizeTextType="uniform"
        android:text="@string/crocodylus_porosus"
        app:layout_constraintBottom_toTopOf="@+id/guidelineCocoH3"
        app:layout_constraintEnd_toStartOf="@+id/guidelineCocoV2"
        app:layout_constraintStart_toStartOf="@+id/guidelineCocoV1"
        app:layout_constraintTop_toTopOf="@+id/guidelineCocoH2" />

    <TextView
        android:id="@+id/textPaleosuchusPalpebrosus"
        android:layout_width="731dp"
        android:layout_height="204dp"
        android:autoSizeTextType="uniform"
        android:text="@string/paleosuchus_palpebrosus"
        app:layout_constraintBottom_toTopOf="@+id/guidelineCocoH4"
        app:layout_constraintEnd_toStartOf="@+id/guidelineCocoV2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineCocoV1"
        app:layout_constraintTop_toTopOf="@+id/guidelineCocoH3"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="93dp"
        android:layout_height="199dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineCocoH2"
        app:layout_constraintEnd_toStartOf="@+id/guidelineCocoV3"
        app:layout_constraintStart_toStartOf="@+id/guidelineCocoV2"
        app:layout_constraintTop_toTopOf="@+id/guidelineCocoH1"
        app:layout_constraintVertical_bias="0.175"
        tools:src="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>